--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,8 @@
-html,
+html {
+  box-sizing: border-box;
+  font-size: calc(12px + (18 - 12) * ((100vw - 600px) / (1920 - 600)));
+}
+
 body {
   padding: 0;
   margin: 0;
@@ -11,6 +15,10 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
