--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,11 +1,10 @@
 html {
   box-sizing: border-box;
   font-size: calc(12px + (18 - 12) * ((100vw - 600px) / (1920 - 600)));
+  scrollbar-width: thin;
 }
 
 body {
-  padding: 0;
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
